# shrank

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: PLAN-BACKEND.md  PLAN-INFERENCE.md  PLAN-IOS.md  PLAN-WEB.md  SHRANK.md
inference/: pyproject.toml  run.sh  server.py
inference/parsers/: response.py
inference/prompts/: extraction.py
ios/: project.yml
ios/Shrank/: Info.plist
ios/Shrank.xcodeproj/: project.pbxproj
ios/Shrank/App/: ContentView.swift  ShrankApp.swift
ios/Shrank/Camera/: CameraView.swift  ImageProcessor.swift
ios/Shrank/Database/: DatabaseManager.swift  Migrations.swift  SearchEngine.swift
ios/Shrank/Helpers/: KeychainHelper.swift  ULID.swift
ios/Shrank/Models/: Document.swift  Entity.swift  SyncState.swift
ios/Shrank/Networking/: APIClient.swift  ReachabilityMonitor.swift  SyncEngine.swift
ios/Shrank/Storage/: ImageStore.swift  ThumbnailCache.swift
ios/ShrankTests/: ShrankTests.swift
ios/ShrankUITests/: ShrankUITests.swift
server/: Cargo.toml
server/src/: auth.rs  config.rs  errors.rs  main.rs  processing.rs
server/src/api/: chat.rs  documents.rs  graph.rs  images.rs  mod.rs  search.rs  sync.rs  system.rs
server/src/db/: documents.rs  entities.rs  graph.rs  migrations.rs  mod.rs  search.rs  sync.rs
server/src/images/: mod.rs  processing.rs  storage.rs
server/src/inference/: client.rs  extraction.rs  mod.rs  prompt.rs  relationships.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  hooks.ts  types.ts
web/src/pages/: Browse.tsx  (+5 more)
(+20 files in other folders)
